@@ -56,6 +56,9 @@ Release 2.7.3 - UNRELEASED
  
  IMPROVEMENTS
  
+    MAPREDUCE-6622. Add capability to set JHS job cache to a
+  	task-based limit (rchiang via rkanter)
+ 
  OPTIMIZATIONS
  
  BUG FIXES
